# vpnbot_telegram_bot

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  __main__.py  docker-compose.yml  project.db  pyproject.toml
.github/workflows/: action.yml
.github/workflows/common-steps/: action,yml
config/: config.py
configs/: config.py
database/: connection.py  crud.py  models.py
src/api/: __init__.py  admin_client.py  auth_client.py  base_client.py  user_client.py
src/bot/: bot.py
src/bot/handlers/: callbacks.py  commands.py  configs.py  states.py
src/bot/keyboards/: admin_keyboard.py  auth_keyboard.py  navigations.py  settings_keyboards.py
src/bot/payments/: __init__.py  payment_manager.py  yoomoney_client.py
src/utils/: __init__.py  decorators.py  helpers.py  loggers.py
